# my-build123d

./: .gitignore  example.py  flake.nix  partcad.yaml  pyproject.toml
flower-inserter/: flower-inserter.py  threads.py
frames/: big-in-small-out.py
mortised_frame/: biso.py
partcad-builds/: flower-inserter.py  partcad_biso.py
shelves/: big-in-small-out.py
src/frame/: biso.py
ww_joints/frame/: biso.py
