[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "my-build123d"
version = "0.2.0"
description = ""
authors = [
    "Jinxuan Zhu <zhujinxuan@gmail.com>"
]
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = "^3.11"
build123d = "^0.5.0"
yacv-server = "^0.8.9"
bd-warehouse = {git = "git@github.com:gumyr/bd_warehouse.git"}
black = "^24.4.2"
