[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ww_joints"
version = "0.2.0"
description = ""
authors = [
    "Jinxuan Zhu <zhujinxuan@gmail.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
build123d = "^0.5.0"
yacv-server = "^0.8.9"
bd-warehouse = {git = "git@github.com:gumyr/bd_warehouse.git"}
black = "^24.4.2"
partcad-cli = "^0.5.22"
ocp-vscode = "^2.3.3"
